--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -4,7 +4,7 @@
   PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conference: [Coe_get_topic] \n"
   PB_CoE_Add_A_Demilitarization_Clause:0 "Demilitarisation of French Society"
   PB_CoE_Add_A_Demilitarization_Clause_desc:0 "To placate the German diplomats, we may introduce an extensive plan to demilitarise the French state to the Dexter Plan. This will hinder French capabilities to build autopods, tanks, artillery, bio-genetic weaponry, airplanes and any military-grade ship or submarine. While it may prove to be the hand the Germans needed to approve of this plan, it would seriously neuter a friendly French military in the forseeable future."
-  PB_CoE_Allow_Lorraine_Occupation:0 "Question of Lorraine"
+  PB_CoE_Allow_Lorraine_Occupation:0 "Occupy Lorraine"
   PB_CoE_Allow_Lorraine_Occupation_desc:0 "It seems unlikely that the Germans would be satisfied with simply keeping the current borders with France untouched. A compromise needs to be made, allowing the continued occupation of the previously demilitarised province of Lorraine by German forces. Britain will approve of the Lorraine occupation for at least 100 years, unless Germany decides to relinquish its control over the territory in the future."
   PB_CoE_A_Jewish_Homeland:0 "Discuss a Jewish Homeland"
   PB_CoE_A_Jewish_Homeland_desc:0 "The Jewish people have suffered immensely under the French regime, seeing insane forms of persecution. While a rather unorthodox proposal, a few German diplomats have proposed to grant the Jewish people a part of France as repayment for the unethical and immoral projects targetting French jews of the former French government."
@@ -24,6 +24,14 @@
   PB_CoE_France_in_Europe_desc:0 "While the German government has gone down the path of unifying the European continent under an unique federation of equal Europeans, the place of France in this new idea of Europe remains a question. Many former enemies of Paris are reluctant to allow the French any kind of equal status in this European confederation, but some have shown far more sympathy for France's place in this new global order. A few proposals are on the table."
   PB_CoE_Schwarz_Plan:0 "Implementing the Schwarz Plan"
   PB_CoE_Schwarz_Plan_desc:0 "France goes bye bye"
+  PB_CoE_Italo_Franco_Border:0 "Redrawing the Franco-Italian Border"
+  PB_CoE_Italo_Franco_Border_desc:0 "Our French ally has bled casualties during this war and now, stirred on by public opinion and the monarchy, is seeking to gain from the conflict. Specifically, the region of Provence has gained the interest of Italy, as an economically viable region with enough potential during reconstruction."
+  PB_CoE_Question_of_Corsica:0 "Question of Corsica"
+  PB_CoE_Question_of_Corsica_desc:0 "Having faced occupation by the French, the island of Corsica has become a small question mark in our larger treaty on France. Who is to govern over this little island of the coast of France and Italy? Is it better to restore the sovereign monarchy of the Bonapartes or award the island to an allied great power in the region?"
+  PB_CoE_The_Parisian_Government:0 "New Parisian Government"
+  PB_CoE_The_Parisian_Government_desc:0 "The French occupation authority is only made to be temporary, so a big question remains in the air during the conference: what kind of regime is to be imposed upon the French after their revanchist one? \n\nThe main two options seem to be a new Republican form of government or a constitutional monarchy without the Bourbons. A republic, while potentially a great boon for a flourishing French democracy in the future, was also the form of government that allowed Doriot and his party to perverse democracy into the revanchist threat we faced. A monarchy, meanwhile, may face new problems and could be seriously unpopular among the French people." 
+  PB_CoE_Fate_of_Algeria:0 "Fate of Algeria"
+  PB_CoE_Fate_of_Algeria_desc:0 "The French acquired the colony of Algeria after the Pied-Noir found themselves victorious during the civil conflict in the region. They longed to unify the old colony to the mainland and were under the Parisian thumb during the Second Great War. Now, we're facing a seriously complex situation. While the Pied-Noir are still loyal to Paris, the majority native population of Algeria would rather be governed by themselves, as an independent republic. The British, meanwhile, still prefer to return Algeria as a part of the Empire."
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -50,6 +58,7 @@
   PB_COE_RCT_GER_PLAN:0 "Has adopted the §gSchwarz Plan§! proposal."
 
   SLOW_RURALISM:0 "In a matter of months, non-urban French states will slowly turn §Rpastoral§!."
+  PB_ITA_ENG_ALLY:0 "§YItaly§! [ITA.GetFlag] is a member of the §RImperial Powers§!."
 
   #Events
 
@@ -66,14 +75,24 @@
   COE.4.t:0 "State turns Pastoral"
   COE.4.d:0 "The deindustrialization policy imposed upon us has hit another region of our country, as it becomes more bare and more people leave the region, hoping to find opportunities elsewhere."
   COE.4.a:0 "Devestation, oh devestation..."
+  COE.5.t:0 "Conference of Europe: Franco-German Border"
+  COE.5.d:0 "With millions and millions of casualties in this war, it is no surprise that some countries have come to the conference with a vengeance against the French state. One of these delegations is from our ally in Naples, which saw thousands of its own people slaughtered during the conflict. Now, stirred on by public opinion and the opinion of the royal court, the Italian delegation has proposed a redrawing of the border shared by France and Italy. \n\nIt is clear that the Italian delegation seeks repayment for the crimes committed by the French, but the question does remain on how much we can give to our Italian ally."
+  COE.5.a:0 "War reparations, that will be all..."
+  COE.5.b:0 "Grant them Savoy"
+  COE.5.c:0 "Follow the Rhone Proposal"
+  COE.6.t:0 "Conference of Europe: Corsica"
+  COE.6.d:0 "The bizarre island of Corsica has, like many Francophone nations, been the victim of French revanchism during the war. Under Paris, Corsican culture experienced attempts at purification and turning it more French and the ruling monarchy of the island nation, the Bonapartes, were exiled by French forces. \n\nIt is now up to the Conference to decide who to grant the territory. While it may seem clear that the old Corsican regime is the only legitimate claimant to the island, both Italy and the UK have also expressed interests in the small island. Italy backs its claim by a historical basis, as Corsica was dominated by the merchant republic of Genoa during the medieval era. Britain, on the other hand, seeks to gain Corsica as a base of operation, granting the Brits another port in the Mediterranean."
+  COE.6.a:0 "Restore the old government of Corsica"
+  COE.6.b:0 "Grant the Italians the island"
+  COE.6.c:0 "Grant the British the island"
 
   COE.x.t:0 "Conference of Europe: The Dexter Plan"
   COE.x.d:0 "Drawn up and proposed by famed Commonwealth economists Harry Dexter White and Henry Morgenthau, the Dexter Plan reeks of British influence. Proposing to minimize the partition of France, the Dexter Plan draws up a map of the pre-expansion borders of France, excluding the region around Dunkerque, which is given to Wallonian state. The plan further details several industrial occupation zones across the country, mainly meant to keep France's heavy industrial capabilities under the watchful eyes of the League of Nations. \n\nWhile a subtle and highly technical plan that promises peace on the continent, the German diplomats have been far less enthusiastic about the proposed plan than their British counterparts. Perhaps the plan can use some revision, but it is currently the proposal we put on the table."
   COE.x.a:0 "Let the vote begin..."
+  COE.x.t:0 "Conference of Europe: Rathenau's Francia" 
+  COE.x.d:0 "An interesting proposal has been put forward by the German delegation at Palace Het Loo. Concluding that Europe has been a continent plagued with wars for over decades at this point, often motivated through national competition and international anarchy, Rathenau's proposal has proposed the unification of the French and German states into one, collosal Frankenstein state. Inspired by the Empire of Charlemagne of the early medieval era, Rathenau coined the name \"Francia\" for his ambitious project of Franco-German unity. \n\nThe proposal has been met with skepticism by British diplomats, but the sudden relaxed tone from the German diplomats has forced the Brits into an interesting position: while unorthodox, this proposal is perhaps the best the UK will get in terms of a German-approved proposal that guarantees continental peace."
+  COE.x.a:0 "Let the vote begin..."
 
-  COE.6.t:0 "Conference of Europe: Rathenau's Francia" 
-  COE.6.d:0 "An interesting proposal has been put forward by the German delegation at Palace Het Loo. Concluding that Europe has been a continent plagued with wars for over decades at this point, often motivated through national competition and international anarchy, Rathenau's proposal has proposed the unification of the French and German states into one, collosal Frankenstein state. Inspired by the Empire of Charlemagne of the early medieval era, Rathenau coined the name \"Francia\" for his ambitious project of Franco-German unity. \n\nThe proposal has been met with skepticism by British diplomats, but the sudden relaxed tone from the German diplomats has forced the Brits into an interesting position: while unorthodox, this proposal is perhaps the best the UK will get in terms of a German-approved proposal that guarantees continental peace."
-  COE.6.a:0 "Let the vote begin..."
   COE.7.t:0 "Dividing the Pie: Burgundy"
   COE.7.d:0 "Historically once part of the Holy Roman Empire, Burgundy is perhaps the region closest to Germany in many ways. A rural chunk of Eastern France, Burgundy may prove an useful puppet in the coming years. \n\nThe British have limited interests in the region, so they will not mind us taking this region."
   COE.7.a:0 "We will take Burgundy then"
@@ -90,7 +109,7 @@
   COE.10.t:0 "Dividing the Pie: Republic of the Seine"
   COE.10.d:0 "An artificial creation born out of the end of the second Great War's treaties, the Republic of the Seine is mainly important due to their Atlantic coast. The Bordeaux port may proof an excellent base for any Atlantic navy, so the British have been very keen on getting this particular piece of France. German diplomats have also shown interest, as the Bordeaux port may proof a good start for a German deep sea navy. \n\nWith conflict between German and British diplomats over this piece of land brewing, a solution may be necessary."
   COE.10.a:0 "We will take this coast for ourselves"
-  COE.10.b:0 "We still need British approval, grant them the region..."
+  COE.10.b:0 "Grant them the region..."
   COE.10.c:0 "The Brits can have it, but we will have Paris"
   COE.10.e:0 "We will take Bordeaux, the Brits can have Paris"
 
@@ -145,7 +164,19 @@
 
   SYR_TUR_Puppet:0 "Syrian Vilayet"
   SYR_TUR_Puppet_ADJ:0 "Syrian"
-  SYR_TUR_Puppet_DEF:0 "The Ottoman Vilayet of Syria"  
+  SYR_TUR_Puppet_DEF:0 "The Ottoman Vilayet of Syria" 
+
+  COR_ENG_PUPPET:0 "Protectorate of Corsica"
+  COR_ENG_PUPPET_DEF:0 "The British Protectorate of Corsica"
+  COR_ENG_PUPPET_ADJ:0 "Corsican"
+
+  OFA_REPUBLIC:0 "Republic of France"
+  OFA_REPUBLIC_DEF:0 "The Republic of France"
+  OFA_REPUBLIC_ADJ:0 "French"
+
+  OFA_KINGDOM:0 "Kingdom of France"
+  OFA_KINGDOM_DEF:0 "The Kingdom of France"
+  OFA_KINGDOM_ADJ:0 "French"
 
   #Ideas
  
@@ -159,3 +190,5 @@
 
   RANIERI_DESC:0 "Italy has been defeated, dismantled and decimated. Sons and fathers have died and widows are all that are left. Germany and Britain, filled with a need for revenge against the aggressors of the second Great War, took Italy's destiny from its own hands and chained the Italian people to artificial creations, such as the new Kingdom of Two Sicilies. The recent crowning of king Ranieri I came when his brother, Ferdinand Pius, refused to rule over this artificial creation of a kingdom, stating that he would only represent the Italian people and not any bastardized form of this concept. Ranieri was the second choice, pressured by the British to accept the crown and rule this petty fiefdom as nothing more than a puppet of London. \n\nSecluded to his luxurious palaces in Naples, Ranieri can only watch as the incompetent government appointed by the Brits after the peace struggle to reconstruct the South of Italy after the war. Poverty, famine and disease plague these lands, which he may call himself a petty king of. A petty king, with petty aspirations, sitting in his petty castle." 
   PIETRO_DESC:0 "Following in the footsteps of the kings of medieval Northern Italy, claimant to the Iron Crown of Lombardy, Pietro II is far from as mythical as these kings. A relative to the German king, Peter Ferdinand changed his name to Pietro to emulate the habsburgs of Tuscany before him, claiming a mantle that has limited attachment to him personally. \n\nPietro II is a king more hated than loved. A foreign replacement imposed on the proud people of Northern Italy, roleplaying as an Italian monarch while disrespecting the symbols of Northern Italy, such as the Iron Crown and the legacy of the Lombardian people. It remains to be seen how long Pietro II can remain in power." 
+
+  foreign_monarch:0 "Foreign Monarch"
