--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2984,8 +2984,8 @@
 
  ULS_ni:0 "Ulster Self Defense Forces"
  ULS_ni_DEF:0 "The Ulster Self Defense Forces"
- ULS_ds:0 "Ulster Self Defense Forces"
- ULS_ds_DEF:0 "The Ulster Self Defense Forces"
+ ULS_ds:0 "Ulster"
+ ULS_ds_DEF:0 "The State of Ulster"
  ULS_rc:0 "Ulster Self Defense Forces"
  ULS_rc_DEF:0 "The Ulster Self Defense Forces"
  ULS_an:0 "Ulster Self Defense Forces"
