starting bits for Spain in COE

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -1405,30 +1405,30 @@ BRG_GER_OCC_ds_ADJ:0 "German-Burgundian"
 BRG_GER_OCC_cn_ADJ:0 "German-Burgundian"
 BRG_GER_OCC_an_ADJ:0 "German-Burgundian"
 
-FRA_Paris_Republic_ni:0 "Republic of the Seine"
-FRA_Paris_Republic_ni_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_ds:0 "Republic of the Seine"
-FRA_Paris_Republic_ds_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_rc:0 "Republic of the Seine"
-FRA_Paris_Republic_rc_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_an:0 "Republic of the Seine"
-FRA_Paris_Republic_an_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_cn:0 "Republic of the Seine"
-FRA_Paris_Republic_cn_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_lb:0 "Republic of the Seine"
-FRA_Paris_Republic_lb_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_ss:0 "Republic of the Seine"
-FRA_Paris_Republic_ss_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_jc:0 "Republic of the Seine"
-FRA_Paris_Republic_jc_DEF:0 "the Republic of the Seine"
-FRA_Paris_Republic_ni_ADJ:0 "Parisian"
-FRA_Paris_Republic_rc_ADJ:0 "Parisian"
-FRA_Paris_Republic_lb_ADJ:0 "Parisian"
-FRA_Paris_Republic_ss_ADJ:0 "Parisian"
-FRA_Paris_Republic_jc_ADJ:0 "Parisian"
-FRA_Paris_Republic_ds_ADJ:0 "Parisian"
-FRA_Paris_Republic_cn_ADJ:0 "Parisian"
-FRA_Paris_Republic_an_ADJ:0 "Parisian"
+FRA_Paris_Republic_ni:0 "Republic of the Loire"
+FRA_Paris_Republic_ni_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_ds:0 "Republic of the Loire"
+FRA_Paris_Republic_ds_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_rc:0 "Republic of the Loire"
+FRA_Paris_Republic_rc_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_an:0 "Republic of the Loire"
+FRA_Paris_Republic_an_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_cn:0 "Republic of the Loire"
+FRA_Paris_Republic_cn_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_lb:0 "Republic of the Loire"
+FRA_Paris_Republic_lb_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_ss:0 "Republic of the Loire"
+FRA_Paris_Republic_ss_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_jc:0 "Republic of the Loire"
+FRA_Paris_Republic_jc_DEF:0 "the Republic of the Loire"
+FRA_Paris_Republic_ni_ADJ:0 "French"
+FRA_Paris_Republic_rc_ADJ:0 "French"
+FRA_Paris_Republic_lb_ADJ:0 "French"
+FRA_Paris_Republic_ss_ADJ:0 "French"
+FRA_Paris_Republic_jc_ADJ:0 "French"
+FRA_Paris_Republic_ds_ADJ:0 "French"
+FRA_Paris_Republic_cn_ADJ:0 "French"
+FRA_Paris_Republic_an_ADJ:0 "French"
 
 FRA_SP_Government_ni:0 "French Social Republic"
 FRA_SP_Government_ni_DEF:0 "the French Social Republic"
@@ -3381,27 +3381,27 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ADR_Andorra_an_ADJ:0 "Andorran"
 
   IST_North_Italy:0 "Kingdom of Val Padana"
-  IST_North_Italy_DEF:0 "The Kingdom of Val Padana"
+  IST_North_Italy_DEF:0 "the Kingdom of Val Padana"
   IST_North_Italy_ADJ:0 "Val Padanian" 
 
   CAT_Aragon:0 "Kingdom of Aragon"
-  CAT_Aragon_DEF:0 "The Kingdom of Aragon"
+  CAT_Aragon_DEF:0 "the Kingdom of Aragon"
   CAT_Aragon_ADJ:0 "Aragonese" 
 
   AUR_Castille:0 "Kingdom of Castile"
-  AUR_Castille_DEF:0 "The Kingdom of Castile"
+  AUR_Castille_DEF:0 "the Kingdom of Castile"
   AUR_Castille_ADJ:0 "Castilian" 
 
   ADL_Kingdom:0 "Kingdom of Andalusia"
-  ADL_Kingdom_DEF:0 "The Kingdom of Andalusia"
+  ADL_Kingdom_DEF:0 "the Kingdom of Andalusia"
   ADL_Kingdom_ADJ:0 "Andalusian" 
 
   ITA_Two_Sicilies:0 "Kingdom of Two Sicilies"
-  ITA_Two_Sicilies_DEF:0 "The Royal Realm of Two Sicilies"
+  ITA_Two_Sicilies_DEF:0 "the Royal Realm of Two Sicilies"
   ITA_Two_Sicilies_ADJ:0 "Sicilian" 
 
   CRO_Dinaric_Federation:0 "Dinaric Kingdom"
-  CRO_Dinaric_Federation_DEF:0 "The Dinaric Federal Kingdom"
+  CRO_Dinaric_Federation_DEF:0 "the Dinaric Federal Kingdom"
   CRO_Dinaric_Federation_ADJ:0 "Dinaric"
 
   SER_Smaller_Serbia:0 "Serbia"
