--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -32,6 +32,12 @@
   PB_CoE_The_Parisian_Government_desc:0 "The French occupation authority is only made to be temporary, so a big question remains in the air during the conference: what kind of regime is to be imposed upon the French after their revanchist one? \n\nThe main two options seem to be a new Republican form of government or a constitutional monarchy without the Bourbons. A republic, while potentially a great boon for a flourishing French democracy in the future, was also the form of government that allowed Doriot and his party to perverse democracy into the revanchist threat we faced. A monarchy, meanwhile, may face new problems and could be seriously unpopular among the French people." 
   PB_CoE_Fate_of_Algeria:0 "Fate of Algeria"
   PB_CoE_Fate_of_Algeria_desc:0 "The French acquired the colony of Algeria after the Pied-Noir found themselves victorious during the civil conflict in the region. They longed to unify the old colony to the mainland and were under the Parisian thumb during the Second Great War. Now, we're facing a seriously complex situation. While the Pied-Noir are still loyal to Paris, the majority native population of Algeria would rather be governed by themselves, as an independent republic. The British, meanwhile, still prefer to return Algeria as a part of the Empire."
+  PB_CoE_Spanish_Division:0 "Dividing the Peninsula"
+  PB_CoE_Spanish_Division_desc:0 "Spain has been an antagonistic force in European affairs for far too long now. One of the main castles of Bourbon influence in Europe, the Spanish Empire and its later iterations have dragged Europe time and time again into war. It is only right for us to rectify this mistake and divide the country into its fundamental parts, along community lines, and establish independent states that serve the interests of the League of Nations."
+  PB_CoE_Spanish_Reconstruction:0 "Renew the Spanish Monarchy"
+  PB_CoE_Spanish_Reconstruction_desc:0 "Under their luddite government, the Spanish saw a revival of monarchist nostalgia emerge among the middle and upper classes, informing government policy and the eventual decision to join the French in their crusade against the status quo. While we have defeated the monarch-friendly government, we haven't defeated the monarch-friendly people. It is perhaps in our best interest to restore the Spanish crown, but not under a Bourbon. Instead, a monarch that is willing to cooperate with Berlin and London is the better choice for the Spanish crown."
+  PB_CoE_Catalan_Occitan_Union:0 "Catalan-Occitan Unification"
+  PB_CoE_Catalan_Occitan_Union_desc
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -125,6 +131,16 @@
   COE.22.d:0 "The war has had an immense impact on every European, soldier and civilian alike. However, certain groups of people have suffered excessive discrimination, persecution and worse under the French regime. Both the delegation of European Jews as the delegation of the zionist organization have had their time during the conference too, both describing the extreme measures of the French dictatorship against European jews, backed by various international humanist organizations and the information gathered by imperial divisions that liberated Alpine work camps. \n\nThe question now seems to be if giving the Jewish people a homeland is enough, or if a serious reparation fund needs to be placed on the French government for its inhumane treatment of its Jewish citizens and other Jewish civilians during the war."
   COE.22.a:0 "We can't place too much burden on the French..."
   COE.22.b:0 "The French will pay for their crimes"
+  COE.23.t:0 "Conference of Europe: Madrid's Role"
+  COE.23.d:0 "With the end of the debate on France, the delegations of the League of Nations have fixed their gaze on Spain, one of France's main allies during the conflict. Spain has supported the French in their revanchist goals for a second time during this century and are thus a serious problem which needs a serious solution. \n\nLearning from the failure of the Spanish Republic in the aftermath of the First Great War, Spain isn't expected to be turned into a second republic again by most delegations. Both the German and British delegations seem to prefer an aligned monarch on the throne, though it remains to be seen how the Spanish people would react to such development. Whatever the future may hold, Spain will suffer the consequences of its loyalty to Paris."
+  COE.23.a:0 "Let's talk about Spain, gentlemen"
+  COE.24.t:0 "Conference of Europe: New Spanish Monarchy"
+  COE.24.d:0 "-"
+  COE.24.a:0 "Come back later to add options"
+  COE.25.t:0 "Conference of Europe: Divided Peninsula"
+  COE.25.d:0 "-"
+  COE.25.a:0 "Divide along the east and the west"
+  COE.25.b:0 "Destroy the concept of Spain"
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
