--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -38,7 +38,52 @@ PB_AME_Loosen_Regulations_Idea:0 "Loosensed Business Regulations"
 AME_protectionist_new_dawn_over_philly:0 "New Economic Resurgence"
 AME_libtard_new_dawn_over_philly:0 "New Economic Resurgence"
 
+##########################
+# GOALS
+##########################
 
+PB_AME_The_Dawes_Ministry:0 "The Dawes Ministry"
+PB_AME_Double_the_Segregation:0 "Double Down on Segregation"
+PB_AME_Maintain_Crittenden_Neutrality:0 "Maintain Crittenden Neutrality"
+PB_AME_Adress_the_Segregation_Issue:0 "Adress the Segregation Issue"
+PB_AME_Addressing_the_Indian_Issue:0 "Revisiting Indian Policy"
+PB_AME_Promote_Bi_Lingualism:0 "Promote Bi-Lingualism"
+PB_AME_Discourage_Native_Language_Education:0 "Discourage Native Languages in School"
+PB_AME_Develop_Haudenosaunia:0 "Develop Haudenosaunia"
+PB_AME_Develop_the_Seminole_Province:0 "Develop the Seminole Provinces"
+PB_AME_Native_Electrification_Bureau:0 "Establish the NEB"
+PB_AME_Concessions_to_White_Provinces:0 "Concede to White Provinces"
+PB_AME_Concessions_to_Coloured_Provinces:0 "Reach out to Coloured Provinces"
+PB_AME_Encourage_Linconia_Immigration:0 "Encourage Linconia Immigration"
+PB_AME_Carte_Blanche_for_the_White_Belt:0 "Carte Blanche for the White Belt"
+PB_AME_Expand_the_Coloured_Brigade_Program:0 "Increase Coloured Brigade Funding"
+PB_AME_Repatriate_White_League_Prisoners:0 "Repatriate White League Prisoners"
+PB_AME_Increase_the_Southern_Development_Fund:0 "Increase the Dixie Development Fund"
+PB_AME_Promote_EIEC_Integration:0 "Promote EIEC Ventures"
+PB_AME_Preferential_Contracts_EIEC:0 "Exclusive Contracts to EIEC"
+PB_AME_Expand_New_Jersey_Technical_Institute:0 "Expand the New Jersey Technical Institute"
+PB_AME_Discourage_EIEC_Expansion:0 "Discourage EIEC Expansion"
+PB_AME_Promote_the_IBM_Alternative:0 "Support the IBM Alternative"
+PB_AME_Reignite_the_MegaCorp_Trade_War:0 "Reignite the MegaCorp War"
+PB_AME_Edison_Mass_Electrification_Plan:0 "Edison Mass Electrification Scheme"
+PB_AME_Infuse_Money_into_Chicago:0 "Infuse Money into the Chicago Megaplex"
+PB_AME_Contract_with_Dolbear_Bell:0 "Contracts with Dolbear-Bell"
+PB_AME_American_Technical_Exceptionalism:0 "American Technical Exceptionalism" 
+PB_AME_Support_to_Nicaragua:0 "Funnel Support to Nicaragua"
+PB_AME_Shift_towards_Nicaraguazation:0 "Shift towards Nicaraguazation"
+PB_AME_Authorize_further_Deployment:0 "Authorize Further Deployment"
+PB_AME_No_Such_Thing_as_Protestors:0 "\"No Such Thing as Protestors!\""
+PB_AME_Make_Empty_Promises:0 "Make Empty Promises"
+PB_AME_Philadelphia_Model_of_Democracy:0 "The American Model of Democracy"
+PB_AME_Nicaraguan_Redevelopment_Fund:0 "Nicaraguan Reconstruction Plan"
+PB_AME_Expand_MinOne_Operations:0 "Expand MinOne Operations"
+PB_AME_Authorize_Operation_Musketeer:0 "Greenlight Operation Musketeer"
+PB_AME_Focus_on_Federalistas:0 "Focus on Federalistas"
+PB_AME_Focus_on_Zeledonistas:0 "Focus on Zeledonistas"
+PB_AME_Begrudging_Atlantic_Cooperation:0 "Begrudging Atlantic Cooperation"
+PB_AME_Revolution_with_an_American_France:0 "Revolution with an American France"
+PB_A_Veneer_of_Federalism:0 "Thin Veneer of Federalism"
+PB_Second_Times_the_Charm:0 "Second Time's the Charm!"
 ##########################
 # PARLIAMENT MECHANICS
 ##########################
@@ -279,6 +324,13 @@ AME_the_aberhard_administration_desc:0 ""
 # EVENTS
 ##########################
 
+##########################
+# TOOLTIPS
+##########################
+
+PB_AME_START_TT_1:0 "§YThe Dawes administration has been consistently troubled by the uppity coloured provinces since the start. If we seek to placate a certain electorate down in the South, the Dawes ministry will have to double down on segregation and protect the provincial autonomy to keep blacks and whites seperate§!."
+PB_AME_START_TT_2:0 "§YThe tension down in Dixie is simply unsolveable for a single administration. It is better to keep playing by the book and respect the Crittenden compromise than to upset the balance in the provinces§!."
+PB_AME_START_TT_3:0 "§YThe Crittenden compromise has brought severe injustice to all already unjust world. The segregation of black and white men along provincial lines, highlighted by the differences in federal funding and development, must end here. If we do not challenge segregation, then who will§!?"
 
 ##########################
 # PUPPET AUTONOMY
