localisation and a few OOB fixes in Mexico

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -131,10 +131,10 @@
  SS_VARIANT_02_desc:0 "§OBakuninist Collectivism§! was developed largely as a reaction to the rise of Jacobinism. Developed by Russian revolutionary Mikhail Bakunin, Collectivism rejected the idea of a revolutionary vanguard proposed my most Jacobin theorists. Instead, Bakunin proposed the idea of an nearly stateless society, operating via direct democracy. In the wake of the bloody postwar Jacobin revolutions, many disenchanted socialists embraced Bakuninist Collectivism and its' ideals of revolutionary democracy and worker's self management."
 
  SS_VARIANT_03:0 "§OReformist Socialism§!"
- SS_VARIANT_03_desc:0 "WIP"
+ SS_VARIANT_03_desc:0 "§OReformist Socialism§! differs from other forms of state socialism by its explicit denial of revolution as a meaningful way towards socialism. Instead, it proposes that socialism can only be brought to the masses by the ballot. Through the democratic process, how much it may favour capitalists, reform can be born and change can be made."
 
  SS_VARIANT_04:0 "§OAgrarian Socialism§!"
- SS_VARIANT_04_desc:0 "WIP"
+ SS_VARIANT_04_desc:0 "§OAgrarian Socialism§! is a strain of socialism that seeks to combine the socialist goal of seizing the means of production with the rural way of life. Agrarian socialism explicitly rejects the urban and progressive dominance of most socialist movements and instead opts for agrarian lifestyles, including a more localized and traditionalist response to socialism. In general, the agrarian socialist movement prefers a bottom up approach to socialism, instead of the top down state-interventionism of most socialist movements."
 
  SS_VARIANT_05:0 "§OKautskyism§!"
  SS_VARIANT_05_desc:0 "WIP"
@@ -940,6 +940,33 @@
   SWK_ds_party:0 "White Rajahs"
   
   DAS_ds_party:0 "Dönitz Administration"
+
+  NRT_ds_party:0 "Norton Dynasty"
+  NRT_rc_party:0 "Norton Dynasty"
+  NRT_cn_party:0 "Norton Dynasty"
+  
+  MRN_lb_party_long:0 "Liberty Party"
+  MRN_lb_party:0 "LP"
+  MRN_rc_party_long:0 "Free Christians Party"
+  MRN_rc_party:0 "Free Christians"
+  MRN_an_party_long:0 "Liberty Party"
+  MRN_an_party:0 "LP"
+  MRN_cn_party_long:0 "Republican Party"
+  MRN_cn_party:0 "Republicans"
+
+  TAC_rc_party_long:0 "Sons of Liberty and Freedom"
+  TAC_rc_party:0 "SLF"
+  TAC_jc_party_long:0 "Sons of Liberty and Freedom"
+  TAC_jc_party:0 "SLF"
+  TAC_ss_party_long:0 "Portland Progressive Party"
+  TAC_ss_party:0 "Progressives"
+  TAC_ni_party_long:0 "Trekker Forever Party"
+  TAC_ni_party:0 "TFP"
+  TAC_ds_party_long:0 "Trekker Forever Party"
+  TAC_ds_party:0 "TFP"
+  
+  NWA_jc_party_long:0 "Transcendentalist Party of New Walden"
+  NWA_jc_party:0 "TPNW"
 
  ############
  # POLITICAL PARTY TEMPLATE 
