--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -66,7 +66,7 @@ PB_AME_Discourage_EIEC_Expansion:0 "Discourage EIEC Expansion"
 PB_AME_Promote_the_IBM_Alternative:0 "Support the IBM Alternative"
 PB_AME_Reignite_the_MegaCorp_Trade_War:0 "Reignite the MegaCorp War"
 PB_AME_Edison_Mass_Electrification_Plan:0 "Edison Mass Electrification Scheme"
-PB_AME_Infuse_Money_into_Chicago:0 "Infuse Money into the Chicago Megaplex"
+PB_AME_Infuse_Money_into_Chicago:0 "Infuse Money into the Melbourne Megaplex"
 PB_AME_Contract_with_Dolbear_Bell:0 "Contracts with Dolbear-Bell"
 PB_AME_American_Technical_Exceptionalism:0 "American Technical Exceptionalism" 
 PB_AME_Support_to_Nicaragua:0 "Funnel Support to Nicaragua"
@@ -327,6 +327,8 @@ AME_the_aberhard_administration_desc:0 ""
 ##########################
 # TOOLTIPS
 ##########################
+
+POLITICS_CHARLES_G_DAWES_DESC:0 "§YBorn§!: 27/8/1865 \n\n§YCharles Gates Dawes§! is build by a family of businessmen, politicians and officers. His father, Rufus Dawes, fought against the Dixie threat during the Southern Rebellion, while his brothers, one by one, turned themselves into profitable men of capital. Dawes followed in their footsteps by establishing the Ohio Gas and Coke Company and making a big name for himself during the Great War during the Iberian Campaign. Eventually, Dawes entered politics during a time where the Federal Unionist Party saw serious defeats against the Progress Party. \n\nFrom 1922 till 1929, Dawes made a name for himself inside the party by becoming the minister of parliament for the province of Ohio, beating the local branch of the Progress Party of Ohio for the first time in two decades. During the 1929 nominations for FUP leadership, Dawes was able to beat out John D. Rockefeller by a narrow margin and headed the FUP for an amazing victory in the parliamentary election, allowing the FUP to form a tense coalition with the Progress Party. The unlikely coalition became reality due to the surprising growth of the CCP and Social Credit Party. Under Dawes, the FUP-Progress coalition has endured, with the prime minister able to juggle the balls of such a divided government."
 
 PB_AME_START_TT_1:0 "§YThe Dawes administration has been consistently troubled by the uppity coloured provinces since the start. If we seek to placate a certain electorate down in the South, the Dawes ministry will have to double down on segregation and protect the provincial autonomy to keep blacks and whites seperate§!."
 PB_AME_START_TT_2:0 "§YThe tension down in Dixie is simply unsolveable for a single administration. It is better to keep playing by the book and respect the Crittenden compromise than to upset the balance in the provinces§!."
