--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -77,9 +77,6 @@
   # DECISIONS/MISSIONS/DEBUG
   ##########################
 
-  PB_AME_DEBUG_SCA_TEST:0 "SCA TEST"
-  AME_Test_SCA:0 "CLICK THIS TO PLAY AS THE SCA"
-
   PB_SCA_The_Final_Few:0 "The Dead March West"
   PB_SCA_The_Final_Few_desc:0 "\n\n\n\n\n\nOur sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death."
   SCA_The_Final_Few:0 "The Final Few"
@@ -724,127 +721,40 @@
 
   SCA1title:0 "The Dead March West"
   SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!" 
-  SCA1opta:0 "Good, Fuck Off"
-  SCA1optb:0 "Wait Let Me Come Too"
+  SCA1opta:0 "Wait let me come too"
+  SCA1optb:0 "Good, fuck off"
+  
   SCA2title:0 "The First Wave"
   SCA2desc:0 "The convoy reared to a closure, behind followed a huge line of hungry and tired peoples. The food situation had already begun deteriorating at this point and rationing had already taken effect. The streets were battered with sand and the definition of hell seemed all to fitting for the situation at hand. The local militias while not uttering a word of hesitance were all to knowledge about the current circumstances. They remained the only people able to still maintain a full belly, them and the various political leaders. Even the veterans were on the short end of the stick. The new Butlerites began being set new homes and rations and the core population looked towards them with distaste and concern. The worst had just begun. " 
   SCA2opta:0 "Brace Yourselfs"
+  
   SCA3title:0 "The Second Wave"
   SCA3desc:0 "As the second wave of Butlerites arrived the crowds that stood waiting at the capitals makeshift gates protested against the entry of more. "What about her, eh?" Shouted a citizen pointing at an old scrunched up figure. At closer inspection of the individual and old crested face revealed itself. "What will she provide now?" Added the engraged citizen as the crowd roared in unison. The old lady coerced with Butler showing to him a small timid boy under her arms. "Now listen hear dear, my son, this boy's father, gave everything to the cause. He died believing in you, in the revolution." Reaching out with her crooked finger she tapped Butlers heart. "If not me surely the boy?" She stood undisturbed at the possibilty of turning back, she knew her time was near but remained defiant at the suggestion of her grandson dying out in these wastes." 
   SCA3opta:0 "We Must Look After The Loyal"
   SCA3optb:0 "Only The Strong Are Allowed"
+  
   SCA4title:0 "The Third Wave"
   SCA4desc:0 "Civilians first, the soldiers defend them. That is the role of the armed vanguard, to be the sword of the working class. To aid in the escape, the Fourth Red Army stayed behind to help usher civilians west. The plan could only hold up for so long. Commonwealth forces have intercepted our comrades in Hardin, trapping them between the Illinois and the Mississippi. 25,000 soldiers are now caught in a mouse trap, 25,000 fighters we can’t afford to lose. A relief force could be sent but we are already stretched so thin. One cynical officer suggests sending “the unreliable” troops in reserves instead, but that would certainly be sending these people to their deaths…." 
   SCA4opta:0 "Send Our Most Able Men As A Relief Force"
   SCA4optb:0 "Heroes Are Made Among The Damned, Send The Reserves"
   SCA4optc:0 "There Is Nothing We Can Do, God Help Them"
+  
   SCA5title:0 "The Fourth Wave"
   SCA5desc:0 "The third army made camp on the bank of the Missouri, waiting for the river to calm down after a few nights of rain. Nearby, an encampment of Sioux warily watched the Europeans. They slowly warmed up, especially after the soldiers began trading ammunition and other supplies for food. Some started speaking about the cause and are interested in joining the cause." 
   SCA5opta:0 "We’ll Take Anyone Willing To Build A Better Future!"
   SCA5optb:0 "Only Those Who Can Fight!"
   SCA5optc:0 "Thank Them, But We Can’t Take Any More People"  
+  
   SCA6title:0 "The Fifth Wave"
   SCA6desc:0 "As the sun set the Northern Army made its move. Consisting mostly of Northerners, Canadians and landless farmers, the caravan used the cover of darkness to get through the cold wet nights. Owing to incapable Navigators, the troops found themselves in the territory of the Confederacy. After some tense initial encounters, the commanding officer explained to tribal elders the situation. Failing to clear the air, the tribal elders sent a messenger, the troops will be allowed passage in return for compensation." 
   SCA6opta:0 "Their Failure Proves We Can’t"
   SCA6optb:0 "We Could Use The Help, Take The Deal"
+  
   SCA7title:0 "The Final Wave"
   SCA7desc:0 "The last soldiers have arrived. Beaten down to the last man, the question remains “why?” how could the movement get to this battered level? Food supplies are scarce. A minority are suggesting a purge of the officer corps and of “undesirable elements." 
   SCA7opta:0 "This Long March Has Cost Us Dearly, It’s Time To Purge"
   SCA7optb:0 "No Man left behind! Denounce the Capitalist Roaders!"
-  SCA8title:0 "The Crow Offensive"
-  SCA8desc:0 "At dawn, shots rang out over the Grey Bull River. Confederacy and Continental army soldiers traded fire for a few hours until the tribes finally crossed over. Dozens of armed men have made their way into the territory of the Second Continental Army. No one knows who shot first but the so-called “Crow Offensive” has effectively started a state of war between the Reds and the natives.\n\nButler has mobilized the soldiers and the ever battered army is ready for war." 
-  SCA8opta:0 "We’ll Win The War With Ol’ Gimlet Eye!"
-  SCA9title:0 "A Bloody Success"
-  SCA9desc:0 "Amongst months of starvation and death, the Second Continental Army has come out as victorious over the Confederacy. Tribal elders are being put on trial and Butlerite soldier keep watch over the settlements. Outside of a few raids, the entire region is now under the Red’s control." 
-  SCA9opta:0 "The West Failed At Bringing Civilization Here, We’ll Build A Better One!"
-  SCA10title:0 "Heirs Of The Revolution"
-  SCA10desc:0 "One hundred sixty-one years ago, the Patriots of the Continental Army set forth to birth a new nation. But their short-sighted bourgeois nature could not see the flaws in their program and how it was not enough. A new breed of revolutionary has inherited the flawed legacy of the liberal bourgeois Continental Army. Smedly Butler, affectionately nicknamed Ol’ Gimlet Eye, sees himself as the inheritor of Washington’s legacy, leading his people west in a second great retreat not unlike that of Valley Forge. Despite separating himself from the failures of the Sons of Liberty, Butler has racked up his own tally of blunders and some Neo-Yankees seek to replace him to achieve the common vision of a world run by the working people of the world." 
-  SCA10opta:0 "From The Ashes Of Our Forebear’s Dreams Of A New World, We'll Build A Better One!" 
-  SCA11title:0 "The Age Divide"
-  SCA11desc:0 "Despite the extreme discipline of the fighting men and women of the Second Continental Army, there is still divisions amongst the fighters. The Butlerite faction remains loyal to their namesake, the old faithful general has led the movement for years and see no need for change. But the disastrous defeat against the Loyalists and Imperialists has led to the SCA’s dire straits. The federalists under Jock Garden, a pragmatic idealist is amicable to working with Butler but sees major changes are needed to ensure the reds’ survival. Meanwhile Oliver Law, once a protégé of Butler and leader of the Continental Army youth sees the old man as betraying the very ideals they fought so hard for." 
-  SCA11opta:0 "The Bickering Of Young And Old Will Get Us killed…."
-  SCA12title:0 "Empty Bellies"
-  SCA12desc:0 "Some call it “victory pork" but it doesn’t hide the reality of the situation; the people are eating squirrel. The lack of food stores and a rocky start to agriculture has led to mass starvation in the Butlerite territory. Rations have been cut and the people are prepared for a long winter.\n\nButler has likened it to valley forge but the situation is seeming just as dire as the first failed revolution." 
-  SCA12opta:0 "Hopefully This Is The Last Time We Tighten Our Belts."
-  SCA13title:0 "War Plan: Oil"
-  SCA13desc:0 "The worst of the worst. A state created purely to strangle the working men and women of America. How dare they. Though these innocent people shall not fear, as we come as liberators, not conquerors.\n\nBoomtown is rich in oil. Founded after oil tycoons left the United Commomwealth to avoid the ever-increasing harsh taxation standards imposed by the poisoned bureaucracy of America. The famous of all these people being the Rockefeller family. The state has now prospered into a so called capitalist utopia, or so they think. While on the surface Boomtown may look like a lost city of gold in actuality it is ripe with disease and crime, and it needs a good, thorough clean." 
-  SCA13opta:0 "No Mercy For These Pigs"
-  SCA14title:0 "War Plan: Freedom"
-  SCA14desc:0 "" 
-  SCA14opta:0 ""
-  SCA15title:0 "War Plan: Salt"
-  SCA15desc:0 "" 
-  SCA15opta:0 ""
-  SCA16title:0 "The Flag Debate"
-  SCA16desc:0 "With our current situation now stabilized questions have arisen regarding our national flag. During the march we made do with an old garrison flag located near the western border, removing the Union Jack of course. This single flag represented how dire our situation was, bearing a giant hole in its top left corner. Now that we have the required resources we must decide what our national flag will be.\n\nWe have three options.\n\nThe simplified version of our current flag with a more acceptable look to it.\n\nA Bedford style flag with a Jacobin coat of arms.\n\nOr a liberty style flag inspired by the first American Revolution with red and white stripes.\n\nSo what will it be?" 
-  SCA16opta:0 "Simple Style"
-  SCA16optb:0 "Bedford Style"
-  SCA16optc:0 "Liberty Style"
-  SCA17title:0 "A Red Army"
-  SCA17desc:0 "" 
-  SCA17opta:0 ""
-  SCA18title:0 "A New Prophet?" # not used for anything
-  SCA18desc:0 "" 
-  SCA18opta:0 "The Peoples Vanguard"
-  SCA18optb:0 "The Young Continental Army"
-  SCA18optc:0 "The Federative Union"
-  SCA19title:0 "The Most Radical Of All" # not used for anything
-  SCA19desc:0 "" 
-  SCA19opta:0 ""
-  SCA20title:0 "One Leader, One Nation" # not used for anything
-  SCA20desc:0 "" 
-  SCA20opta:0 ""
-  SCA21title:0 "A Fair Revolution" # not used for anything
-  SCA21desc:0 "" 
-  SCA21opta:0 ""
-  SCA22title:0 "Talks In Salt Lake City"
-  SCA22desc:0 "" 
-  SCA22opta:0 ""
-  SCA23title:0 "Talks In Boomtown"
-  SCA23desc:0 "" 
-  SCA23opta:0 ""
-  SCA24title:0 "An American Ally?" # not used for anything
-  SCA24desc:0 "" 
-  SCA24opta:0 "Of Course"
-  SCA24optb:0 "We Have No Interests In Their Affairs"
-  SCA25title:0 "Mexico Accepts" # not used for anything
-  SCA25desc:0 "" 
-  SCA25opta:0 "Wonderful News"
-  SCA26title:0 "Mexico Refuses" # not used for anything
-  SCA26desc:0 "" 
-  SCA26opta:0 "What!"
-  SCA27title:0 "The Sounds Of War" # - This loc is being done by someone else
-  SCA27desc:0 "" 
-  SCA27opta:0 "The Dead March West"
-  SCA28title:0 "California Burns"
-  SCA28desc:0 "The proletariat has succeded in spreading the revolution to California, but at a major price.\n\nMany californians did not see eye to eye with our glorious cause, and held out against our forces valiantly. Eventually the proletariat realized that their salvation was at hand, and assisted our liberation of Sacramento.\n\nThe result of all of the fighting has led to the previous harmony being disrupted. The city itself burns with the scars of broken harmony.\n\nHowever, we cannot mourn the fallen. With our red wave soaking over all unclaimed and disparate nations of the west, we finally have enough strength, land and resources to finish what we started so many years ago.\n\nChairman Smedley Butler marched through the city with his elite forces towards the city square where he eventually held a speech to the few soldiers and citizens remained.\n\n'Workers of California, rejoice! The unstoppable revolution has liberated you from the capitalists who oppressed you. You are now part of something greater, a movement that will unite the entirety of america's workers and destroy imperialism worldwide. We may have failed in our initial revolution, but we will not fail again!" 
-  SCA28opta:0 "Now We March East"
-  SCA29title:0 "The Next Steps"
-  SCA29desc:0 "" 
-  SCA29opta:0 "Do Not Rest Easy"
-  SCA30title:0 "Jacobin Unrest" # - This loc is being done by someone else
-  SCA30desc:0 "" 
-  SCA30opta:0 "Hunt Down These Thugs"
-  SCA31title:0 "A Friend Across The Pacific" # - This loc is being done by someone else
-  SCA31desc:0 "" 
-  SCA31opta:0 "We Welcome Our American Friends"
-  SCA32title:0 "Reports From Mitsi Adazi"
-  SCA32desc:0 "" 
-  SCA32opta:0 "Kill Them Once And For All"
-  SCA33title:0 "A New Capital?" # - This loc is being done by someone else
-  SCA33desc:0 "" 
-  SCA33opta:0 "San Francisco Looks Nice This Time Of The Year"
-  SCA33optb:0 "A New Life In Los Angeles"
-  SCA33optc:0 "Mitsi Adazi Is Our Home"
-  SCA34title:0 "A Red America"
-  SCA34desc:0 "" 
-  SCA34opta:0 "We Fucking Did It"
-  SCA35title:0 "In The Belly Of The Beast"
-  SCA35desc:0 "" 
-  SCA35opta:0 "Our Survival Comes First"
-  SCA36title:0 "Safe And Sound"
-  SCA36desc:0 "" 
-  SCA36opta:0 "We Live In The Shadows, For Now"
+
 
 
 
