--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
   ###Topbar
-  SCA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Form the United States\n    - Conquer your way to the East Coast \n    - Manage the SCA's precarious situation\n    - Avenge the Failed Revolution\n    - Spread the Revolutionary cause globally\n\n§YSituation:§!\nThe Second Continental Army is a failed state, filled with the dreams and hopes of thousands. Most of the population consists of hardened Great War veterans and young determined souls wishing to bring about the collapse of the Anglo-American capitalist economic system that had failed them and their families. These soldiers of the revolution have marched as far as Halifax all the way to the Oregon Coast in search for better opportunities, under the leadership of the prestigious American general Smedley Butler. Butler was the de facto leader of the Bonus Brigade, made up of impoverished Great War veterans that felt betrayed by their governments lack of financial and social support. The Bonus Brigade Crisis as it would be come to be known as would see Butler attempt a revolution in Philadelphia with the support of thousands of veterans and general military personal. However, this revolution wouldn’t last long and soon enough Butler and his supporters would find themselves marching through the last bastion of uncolonized America in a bid to escape the United Commonwealth military, finally setting up shop on the Oregon Coast.\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
+  SCA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Form the United States\n    - Conquer your way to the East Coast \n    - Manage the SCA's precarious situation\n    - Avenge the Failed Revolution\n    - Spread the Revolutionary cause globally\n\n§YSituation:§!\nThe Second Continental Army is a failed state, filled with the dreams and hopes of thousands. Most of the population consists of hardened Great War veterans and young determined souls wishing to bring about the collapse of the Anglo-American capitalist economic system that had failed them and their families. These soldiers of the revolution have marched as far as Halifax all the way to the Oregon Coast in search for better opportunities, under the leadership of the prestigious American general Smedley Butler. Butler was the de facto leader of the Bonus Brigade, made up of impoverished Great War veterans that felt betrayed by their governments lack of financial and social support. The Bonus Brigade Crisis as it would be come to be known as would see Butler attempt a revolution in Philadelphia with the support of thousands of veterans and general military personal. However, this revolution wouldn’t last long and soon enough Butler and his supporters would find themselves marching through the last bastion of uncolonized America in a bid to escape the United Commonwealth military, finally setting up shop on the Oregon Coast.\n\nThe §YThe Second Continental Army§! is a §RFailed State§!\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
 
   ##########################
   # LEADERS
@@ -38,7 +38,7 @@
   SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
   
   PB_SCA_The_Sleeping_Giant:0 "The Sleeping Giant"
-  PB_SCA_The_Sleeping_Giant_desc:0 "\n\n\n\n\n\nThough we have exiled ourselves to the middle of buttfuck nowhere the §YUnited Commonwealth§! casts a poisoned shadow over our people, and our states very existence. They know we left, and we settled ourselves for a new life, but if they find even our general whereabouts then our very survival is at stake. It is therefore necessary that we keep our presence unknown until we are ready to strike first or until we at the very least reach an acceptable level of readiness.\n\nThe cost of the '§YHide From The Giant§!' decision equates to how many battalions you have mobolized, i.e. nine battalions = nine political power, this is related to battalions, §RNOT DIVISIONS§!. If The UC discovers us an event will fire in approx. four days at which point war will follow. This basically means death. It is §RHIGHLY§! reccommended that you do not spam out divisions willy-nilly. Once you have formed the Pacific Union this mechanic will come to an end since your existence and whereabouts will be made very clear to the UC at that point.\n\n§RGod help us all if they discover our sanctuary, our home.§!"
+  PB_SCA_The_Sleeping_Giant_desc:0 "\n\n\n\n\n\nThough we have exiled ourselves to the middle of buttfuck nowhere the §YUnited Commonwealth§! casts a poisoned shadow over our people, and our states very existence. They know we left, and we settled ourselves for a new life, but if they find even our general whereabouts then our very survival is at stake. It is therefore necessary that we keep our presence unknown until we are ready to strike first or until we at the very least reach an acceptable level of readiness.\n\nThe cost of the '§YHide From The Giant§!' decision equates to how many battalions you have mobolized, i.e. nine battalions = nine political power, this is related to battalions, §RNOT DIVISIONS§!. If The UC discovers us then we will suffer from a §RSEVERE§! national spirit debuff that can only be removed after the UC is defeated. This basically means death. It is §RHIGHLY§! reccommended that you do not spam out divisions willy-nilly. Once you have conquered most of the Mid-West this mechanic will come to an end since your existence and whereabouts will be made very clear to the UC at that point.\n\n§RGod help us all if they discover our sanctuary, our home.§!"
   SCA_With_Open_Eyes:0 "With Open Eyes"
   SCA_With_Open_Eyes_desc:0 "Like prey hiding from an Eagle on the hunt any sudden movement could give our vulnerable position away. We must take great precautions in the way we conduct our struggling nation else we meet the mouth of the predator."
   SCA_With_Open_Eyes_2:0 "With Open Eyes"
@@ -115,6 +115,18 @@
   ##########################
  
   SCA1tooltip:0 "§YYou will tag switch to the SCA§!"
+
+  SCA2tooltip:0 "§RWe Are All Thats Left§!" 
+
+  SCA3tooltip:0 "§YOne Militia Will Be Raised§!"
+
+  SCA4tooltip:0 "§RWe Must Protect Our Freedoms!§!"
+
+  SCA28tooltip:0 "The '§YWith Open Eyes§!' Misson Timer Will Be Reset"
+
+  SCA29tooltip:0 "§RTHIS WILL LEAD TO WAR!§!"
+
+  All_Thats_Left:0 "The Last Wave Has Arrived"
   
   ##########################
   # EVENTS
