I need to go to bed

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -160,6 +160,9 @@
   All_Thats_Left:0 "The Last Wave Has Arrived"
 
   SCA_New_Flag:0 "The SCA will receive a new §YFlag§!"
+
+  SCA_The_Portland_Compromise_tt:0 "\n§gShould§! [TAC.getflag] §YNew Virginia§! §gagree to our demands we will annex them and gain all their generals§!"
+  SCA_Similar_Peoples_Similar_Goals_tt:0 "\n§gShould§! [NWA.getflag] §YNew Walden§! §gagree to our demands we will annex them and gain all their generals§!"
   
   ##########################
   # EVENTS
@@ -200,6 +203,22 @@
   SCA7desc:0 "The last soldiers have arrived. Beaten down to the last man, the question remains “why?” how could the movement get to this battered level? Food supplies are scarce. A minority are suggesting a purge of the officer corps and of “undesirable elements." 
   SCA7opta:0 "This Long March Has Cost Us Dearly, It’s Time To Purge"
   SCA7optb:0 "No Man left behind! Denounce the Capitalist Roaders!"
+
+  SCA8title:0 "The SCA Demands Our Annexation"
+  SCA8desc:0 "" 
+  SCA8opta:0 "Yes"
+  SCA8optb:0 "No"
+
+  SCA9title:0 "Our Demands Were Rejected"
+  SCA9desc:0 "" 
+  SCA9opta:0 "War it is"
+
+  SCA10title:0 "Our Demands Were Accepted"
+  SCA10desc:0 "" 
+  SCA10opta:0 "Good"
+
+
+  
 
 
 
