--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -81,13 +81,16 @@
   # NATIONAL IDENTITY
   ##########################
 
-  PB_Second_Continental_Army:0 "Second Continental Army"
+  PB_Second_Continental_Army:0 "American Revolutionism"
 
   ##########################
   # TRAITS
   ##########################
 
   PB_Vacancy:0 "Vacancy"
+  PB_Military_Vacancy:0 "Vacancy"
+  PB_Military_Vacancy_1:0 "Vacancy"
+  PB_Military_Vacancy_2:0 "Vacancy"
   PB_Struggling_Dogs:0 "Struggling Dogs"
 
   ##########################
@@ -100,19 +103,19 @@
   SCA_The_Dead_March_West_desc:0 "Our initial revolutiion has failed and now we must lick our wounds and rebuild our strength so that one day we may return to take what is rightfully ours. This will be no simple proccess, already plans have been drawn up to expand our regional influence with our direct neighbours. "
 
   SCA_The_First_Seeds:0 "The First Seeds"
-  SCA_The_First_Seeds_desc:0 "Food, what more is there to say really. Without a stable reserve of food, be it even just wheat, we could face a catastrophic crisis on our hands. Luckily most of the intial wave had brought over large amounts of various seeds and cattle, time to put our citizens to work."
+  SCA_The_First_Seeds_desc:0 "Food, what more is there to say really. Without a stable reserve of food, be it even just wheat, we could face a catastrophic crisis on our hands. Luckily most of the intial wave had brought over large amounts of various seeds and cattle, time to put our citizens to good work."
 
   SCA_Outlaw_Country:0 "Outlaw Country"
-  SCA_Outlaw_Country_desc:0 ""
+  SCA_Outlaw_Country_desc:0 "The original inhabitants that roam these lands were Cantonese migrants that settled the Oregon Coast, of which many turned to banditry to make ends meet. Thousands still roam these lands and it would be a waste to let these people simply grow old and die, let us fill them with the same dreams we have so that they may lend us their skills."
 
   SCA_Ready_Your_Damn_Rifles:0 "Ready Your Damn Rifles"
-  SCA_Ready_Your_Damn_Rifles_desc:0 ""
+  SCA_Ready_Your_Damn_Rifles_desc:0 "In this great struggle of ours there are those that have, and those that have not. We were the many that had littler to our name or legacy, but with this new life we brought everything under our possession. Mostly guns and bullets."
 
   SCA_Children_Of_The_Revolution:0 "Children Of The Revolution"
-  SCA_Children_Of_The_Revolution_desc:0 ""
+  SCA_Children_Of_The_Revolution_desc:0 "Just like George Washington we face seemingly unstoppable threats but with enough determination and grit we shall break those odds like a revolutionary sword. One that will pierce the heart of Philadelphia and bring their rot filled state crumbling down."
 
   SCA_Our_Greatest_Struggle:0 "Our Greatest Struggle"
-  SCA_Our_Greatest_Struggle_desc:0 ""
+  SCA_Our_Greatest_Struggle_desc:0 "We are surrounded on all sides by states that wish to see our great dream wither away, but some within these nations may be convinced otherwise. They will join us, willingly or not. "
 
   SCA_The_Portland_Compromise:0 "The Portland Compromise"
   SCA_The_Portland_Compromise_desc:0 ""
@@ -140,6 +143,56 @@
 
   SCA_A_Red_Utopia:0 "A Red Utopia"
   SCA_A_Red_Utopia_desc:0 ""
+
+  # Second Continental Army - Exile Two
+
+  SCA_The_First_American_Congress:0 "The First American Congress"
+  SCA_The_First_American_Congress_desc:0 ""
+
+  SCA_The_Butlerite_Proclamation:0 "The Butlerite Proclamation"
+  SCA_The_Butlerite_Proclamation_desc:0 ""
+
+  SCA_Dawn_Of_The_Peoples_Council:0 "Dawn Of The People's Council"
+  SCA_Dawn_Of_The_Peoples_Council_desc:0 ""
+
+  SCA_Rapid_Industrialization:0 "Rapid Industrialization"
+  SCA_Rapid_Industrialization_desc:0 ""
+
+  SCA_Fire_Up_The_Steelworks:0 "Fire Up The Steelworks"
+  SCA_Fire_Up_The_Steelworks_desc:0 ""
+
+  SCA_Centralize_The_Administration:0 "Centralize The Administration"
+  SCA_Centralize_The_Administration_desc:0 ""
+
+  SCA_Establish_A_Professional_Fighting_Corps:0 "Establish A Professional Fighting Corps"
+  SCA_Establish_A_Professional_Fighting_Corps_desc:0 ""
+  
+  SCA_Setup_The_Ministries:0 "Setup The Ministries"
+  SCA_Setup_The_Ministries_desc:0 ""
+
+  SCA_The_Peoples_Army:0 "The People's Army"
+  SCA_The_Peoples_Army_desc:0 ""
+
+  SCA_The_Washington_Monument:0 "The Washington Monument"
+  SCA_The_Washington_Monument_desc:0 ""
+
+  SCA_The_Peoples_Despot:0 "The People's Despot"
+  SCA_The_Peoples_Despot_desc:0 ""
+
+  SCA_Heros_Of_The_Revolution:0 "Heros Of The Revolution"
+  SCA_Heros_Of_The_Revolution_desc:0 ""
+
+  SCA_The_International_Jacobin_Brigade:0 "The International Jacobin Brigade"
+  SCA_The_International_Jacobin_Brigade_desc:0 ""
+
+  SCA_United_By_Ideology:0 "United By Ideology"
+  SCA_United_By_Ideology_desc:0 ""
+
+  SCA_Our_Great_March_East:0 "Our Great March East"
+  SCA_Our_Great_March_East_desc:0 ""
+
+  SCA_A_Truly_American_Revolution:0 "A Truly American Revolution"
+  SCA_A_Truly_American_Revolution_desc:0 ""
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
