--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -33,6 +33,15 @@
   PB_SCA_The_American_Revolution_2:0 "The American Revolution"
   PB_SCA_The_American_Revolution_2_desc:0 "Long have we remained under the yoke of the British Empire. Long have we struggled against their tyrannical rule. The age of imperialism is dying in front of their very eyes yet they are still blinded by the fog. We have washed our eyes clean and seen the world for what it really is. A playground for the rich and powerful."
 
+  PB_SCA_The_American_Revolution_3:0 "The American Revolution"
+  PB_SCA_The_American_Revolution_3_desc:0 "Long have we remained under the yoke of the British Empire. Long have we struggled against their tyrannical rule. The age of imperialism is dying in front of their very eyes yet they are still blinded by the fog. We have washed our eyes clean and seen the world for what it really is. A playground for the rich and powerful."
+
+  PB_SCA_The_American_Revolution_4:0 "The American Revolution"
+  PB_SCA_The_American_Revolution_4_desc:0 "Long have we remained under the yoke of the British Empire. Long have we struggled against their tyrannical rule. The age of imperialism is dying in front of their very eyes yet they are still blinded by the fog. We have washed our eyes clean and seen the world for what it really is. A playground for the rich and powerful."
+
+  PB_SCA_Building_The_Washington_Monument:0 "Building The Washington Monument"
+  
+
   ##########################
   # DECISIONS/MISSIONS/DEBUG
   ##########################
@@ -60,6 +69,11 @@
   SCA_Stabilize_The_Nation:0 "Stabilize The Nation"
   SCA_Recruit_Cowboys:0 "Recruit Cowboys"
 
+  ##########################
+  # DYNAMIC MODIFIERS
+  ##########################
+
+  SCA_Washington_Monument:0 "The Washington Monument"
 
   ##########################
   # OPINION MODIFIERS
@@ -72,10 +86,28 @@
   # MINISTERS
   ##########################
 
-  SCA_PB_Vacancy_em:0 "Vacant Political Position"
-  SCA_PB_Vacancy_fm:0 "Vacant Political Position"
-  SCA_PB_Vacancy_im:0 "Vacant Political Position"
+  SCA_PB_Vacancy_em:0 "Vacant Political Position (Economics Minister)"
+  SCA_PB_Vacancy_fm:0 "Vacant Political Position (Foreign Affairs Minister)"
+  SCA_PB_Vacancy_im:0 "Vacant Political Position (Internal Minister)"
+
+  SCA_The_Peoples_Congress_HOG:0 "The People's Congress"
+
+  #HOG
+
   SCA_Smedley_Butler_HOG:0 "Smedley Butler"
+
+  #EM
+  SCA_PB_William_Foster:0 "William Foster"
+  SCA_PB_Eugene_Dennis:0 "Eugene Dennis"
+  SCA_PB_Ruthenberg:0 "C. E. Ruthenberg"
+  
+  #FAM
+  SCA_PB_Earl_Browder:0 "Earl Browder"
+  SCA_PB_Alfred_Wagenknecht:0 "Alfred Wagenknecht"
+
+  #IM
+  SCA_PB_Louise_Bryant:0 "Louise Bryant"
+  SCA_PB_John_Reed:0 "John Reed"
 
   ##########################
   # NATIONAL IDENTITY
@@ -92,6 +124,13 @@
   PB_Military_Vacancy_1:0 "Vacancy"
   PB_Military_Vacancy_2:0 "Vacancy"
   PB_Struggling_Dogs:0 "Struggling Dogs"
+  PB_Revolutionary_Congress:0 "Revolutionary Congress"
+  PB_Building_A_Red_Utopia:0 "Building A Red Utopia"
+
+  trait_SCA_Heros_Of_The_Revolution:0 "Hero Of The Revolution"
+  trait_SCA_Heros_Of_The_Revolution_desc:0 ""
+  trait_SCA_United_By_Ideology:0 "United By Ideology"
+  trait_SCA_United_By_Ideology_desc:0 ""
 
   ##########################
   # FOCUS
@@ -216,6 +255,23 @@
 
   SCA_The_Portland_Compromise_tt:0 "\n§gShould§! [TAC.getflag] §YNew Virginia§! §gagree to our demands we will annex them and gain all their generals§!"
   SCA_Similar_Peoples_Similar_Goals_tt:0 "\n§gShould§! [NWA.getflag] §YNew Walden§! §gagree to our demands we will annex them and gain all their generals§!"
+  
+  SCA_The_Butlerite_Proclamation_tt:0 "Smedley Butler will be given full dictatorial powers and Congress will be sidelined. This path will eventually lead to the formation of the §YNorth American Peasants and Workers Republic§!.\n\n"
+  SCA_Dawn_Of_The_Peoples_Council_tt:0 "\nCongress will achieve total control and Butler will be the first American President, his term will end with the unification of America . This path will eventually lead to the formation of the §YUnited States§!.\n\n"
+
+  SCA210tooltip:0 "\nNew §YMinisters§! unique to your political path will be unlocked and will be available for Selection\n\nThese §YMinister§! are as follows:\n\n"
+
+  SCA211tooltip:0 "\nNew §YOfficers§! unique to your political path will be unlocked and will be available for Selection\n\nThese §YOfficers§! are as follows:\n\n"
+
+  SCA_Spacing_tt:0 " \n"
+
+  SCA_The_Washington_Monument_tt:0 "The following debuff will be active during this focus:\n\n"
+
+  SCA_The_Washington_Monument_tt_2:0 "\nWhen the focus is complete you will gain:\n\n"
+
+  SCA_The_Washington_Monument_tt_3:0 "\nShould any enemy nation occupy this state they will have the option to §RDestroy§! the Washington Monument"
+
+  SCA_Our_Great_March_East_tt:0 "The Sic Semper Tyrannis §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nThere are certain path unique decisions and mechanics"
   
   ##########################
   # EVENTS
