--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -10,7 +10,7 @@
   POLITICS_Smedley_Butler_Exile_DESC:0 "§YBorn:§! 30/7/1881\n\n§YSmedley Butler§! is failed man with a failed dream. With the defeat of the American-Jacobin Revolution Butler and his disciples marched west into untamed America in hopes of a new life. The result was the death of many and those who were the "lucky" bunch soon found out why the settlers of the old America failed in their ambitions. Whilst their greatest foe is the Commonwealth, second ranks nature and her desire to elevate the human struggle to the rest of the animal kingdom.\n\nNow begins the greatest test of all, to see what it truely takes to break a man, and an idea.\n\n§RSic semper tyrannis§! is a Latin phrase meaning "thus always to tyrants". It suggests that bad outcomes should or eventually will befall tyrants, and that shall be out motto."
   
   ##########################
-  # MINISTERS
+  # LEGITIMACY MECHANIC
   ##########################
 
 
@@ -181,25 +181,25 @@
   SCA_Our_Greatest_Struggle_desc:0 "We are surrounded on all sides by states that wish to see our great dream wither away, but some within these nations may be convinced otherwise. They will join us, willingly or not, and then and only then will our grand American utopian dream finally start bearing fruit."
 
   SCA_The_Portland_Compromise:0 "The Portland Compromise"
-  SCA_The_Portland_Compromise_desc:0 ""
+  SCA_The_Portland_Compromise_desc:0 "The citizens of New Virginia similarly share our states admiration for George Washington and what he represented, should we focus on this common ground we could convince the nation of New Virginia to peacefully join our cause."
 
   SCA_False_Heirs_No_More:0 "False Heirs No More"
-  SCA_False_Heirs_No_More_desc:0 ""
+  SCA_False_Heirs_No_More_desc:0 "These fools in Portland believe that they are the true descendants of Washington's inner circle, the last true remants of the American revolutionaries of old. Although these are simply lies created by New Virginia to give credence to their goals the mere presence of such a state directly threatens our Utopian dream, destruction is the only option to safeguard our ideals. "
 
   SCA_Purge_Idiocracy:0 "Purge Idiocracy"
-  SCA_Purge_Idiocracy_desc:0 ""
+  SCA_Purge_Idiocracy_desc:0 "Idiots, fools, degenerates, and the like all threaten our nation. New Virigina may belong to us but its soul is corrupt and in need of a dire clean up. A little revolutionary propoganda and forced assimilation will do the job just fine."
 
   SCA_Crush_The_Religious_Zealots:0 "Crush The Religious Zealots"
-  SCA_Crush_The_Religious_Zealots_desc:0 ""
+  SCA_Crush_The_Religious_Zealots_desc:0 "Religion is the great evil of all societies, its inherently corrupt and has little care for the common man and women. Religion serves only the rich and powerful, and one must ask themselves if God is truly real, then why did he create all the worlds tourment?"
   
   SCA_The_Midnight_Massacre:0 "The Midnight Massacre"
-  SCA_The_Midnight_Massacre_desc:0 ""
+  SCA_The_Midnight_Massacre_desc:0 "We asked them, they said no, we begged them, they said no, we demanded them, they said no, we took them, they said nothing."
 
-  SCA_Similar_Peoples_Similar_Goals:0 "Similar Peoples Similar Goals"
-  SCA_Similar_Peoples_Similar_Goals_desc:0 ""
+  SCA_Similar_Peoples_Similar_Goals:0 "Similar Peoples, Similar Goals"
+  SCA_Similar_Peoples_Similar_Goals_desc:0 "New Walden is another state trying to achieve the Utopia dream, however they have been corrupted by and have come to twisted conclusions. We should reach out to them and inform them that we too wish for this great utopia, one that has stayed true to the cause."
 
   SCA_There_Can_Only_Be_One:0 "There Can Only Be One"
-  SCA_There_Can_Only_Be_One_desc:0 ""
+  SCA_There_Can_Only_Be_One_desc:0 "There are those that reject the Jacobin cause, follow it, and twist it.  New Walden has drifted off the true path to the great utopian dream and have come crash landing into blind devotion to natures lure, we will reveal to them the true threat, and the true way to deal with it."
 
   SCA_New_Flag_Poles:0 "New Flag Poles"
   SCA_New_Flag_Poles_desc:0 ""
@@ -308,7 +308,7 @@
   ##########################
 
   SCA1title:0 "The Dead March West"
-  SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!" 
+  SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened." 
   SCA1opta:0 "Wait let me come too"
   SCA1optb:0 "Good, fuck off"
   
